[package]
name = "conduit"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
anyhow = "1.0.97"
arcstr = { version = "1.2.0", features = ["serde"] }
dashmap = "6.1.0"
fjall = "2.8.0"
redb = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["sync"] }
tokio-stream = "0.1.17"
