[package]
name = "conduit"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
dashmap = "6.1.0"
redb = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["sync"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand = "0.8.5"
once_cell = "1.19.0"
argon2 = "0.5.0"

[dev-dependencies]
actix-test = "0.1.5"
anyhow = "1.0.97"
fastrand = "2.3.0"
futures = "0.3.31"
md5 = "0.7.0"
serde_plain = "1.0.2"
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["sync", "macros"] }
